nephio-infra/infra.yaml

Description:  Nephio VPC Template
Parameters:
  LatestAmiId:
    Description: AMI for EC2 (default is latest AmaLinux2023)
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/canonical/ubuntu/server/20.04/stable/current/amd64/hvm/ebs-gp2/ami-id'
    # Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64'
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: "Name of an existing SSH Keypair to access the instance"
    Default: "ntnguyen"
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.16.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: nephio-vpc
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: nephio-vpc-igw
  InternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  RouteTableWeb: 
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: A4L-vpc1-rt-web
  RouteTableWebDefaultIPv4: 
    Type: 'AWS::EC2::Route'
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId:
        Ref: RouteTableWeb
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId:
        Ref: InternetGateway
  RouteTableAssociationWebA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetWEBA
      RouteTableId:
        Ref: RouteTableWeb
  RouteTableAssociationWebB:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetWEBB
      RouteTableId:
        Ref: RouteTableWeb
  RouteTableAssociationWebC:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref SubnetWEBC
      RouteTableId:
        Ref: RouteTableWeb
  SubnetReservedA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.16.0.0/20
      Tags:
        - Key: Name
          Value: sn-reserved-A
  SubnetReservedB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: 10.16.64.0/20
      Tags:
        - Key: Name
          Value: sn-reserved-B
  SubnetReservedC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 2, !GetAZs '' ]
      CidrBlock: 10.16.128.0/20
      Tags:
        - Key: Name
          Value: sn-reserved-C
  SubnetDBA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.16.16.0/20
      Tags:
        - Key: Name
          Value: sn-db-A
  SubnetDBB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: 10.16.80.0/20
      Tags:
        - Key: Name
          Value: sn-db-B
  SubnetDBC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 2, !GetAZs '' ]
      CidrBlock: 10.16.144.0/20
      Tags:
        - Key: Name
          Value: sn-db-C
  SubnetAPPA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.16.32.0/20
      Tags:
        - Key: Name
          Value: sn-app-A
  SubnetAPPB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: 10.16.96.0/20
      Tags:
        - Key: Name
          Value: sn-app-B
  SubnetAPPC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 2, !GetAZs '' ]
      CidrBlock: 10.16.160.0/20
      Tags:
        - Key: Name
          Value: sn-app-C
  SubnetWEBA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.16.48.0/20
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: sn-web-A
  SubnetWEBB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: 10.16.112.0/20
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: sn-web-B
  SubnetWEBC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 2, !GetAZs '' ]
      CidrBlock: 10.16.176.0/20
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: sn-web-C
  BastionHost:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: "t2.micro"
      KeyName: !Ref KeyName
      ImageId: !Ref LatestAmiId
      IamInstanceProfile: !Ref SessionManagerInstanceProfile
      SubnetId: !Ref SubnetWEBA
      SecurityGroupIds: 
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: BastionHost
  Mmgt:
    Type: AWS::EC2::Instance 
    DependsOn: RoutePrivateSubnetIPv4
    Properties:
      InstanceType: "t2.xlarge"
      KeyName: !Ref KeyName
      ImageId: !Ref LatestAmiId
      IamInstanceProfile: !Ref SessionManagerInstanceProfile
      SubnetId: !Ref SubnetAPPA
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            echo $pwd
            cd /home/ubuntu
            wget https://raw.githubusercontent.com/Playground-For-DevOps/aws-cloudformation-templates/master/nephio-infra/k8s-cluster/mgmt/kube125-mgmt.sh
            chmod +x kube125-mgmt.sh
            sudo ./kube125-mgmt.sh | tee install_mgmt_log.txt

      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: ManagementCluster
  Regional:
    Type: AWS::EC2::Instance 
    DependsOn: RoutePrivateSubnetIPv4
    Properties:
      InstanceType: "t2.xlarge"
      KeyName: !Ref KeyName
      ImageId: !Ref LatestAmiId
      IamInstanceProfile: !Ref SessionManagerInstanceProfile
      SubnetId: !Ref SubnetAPPA
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            echo $pwd
            cd /home/ubuntu
            wget https://raw.githubusercontent.com/Playground-For-DevOps/aws-cloudformation-templates/master/nephio-infra/k8s-cluster/regional/kube125-regional.sh
            chmod +x kube125-regional.sh
            sudo ./kube125-regional.sh | tee install_regional_log.txt

      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: RegionalCluster
  # Worker1:
  #   Type: AWS::EC2::Instance
  #   DependsOn: RoutePrivateSubnetIPv4
  #   Properties:
  #     InstanceType: "t2.xlarge"
  #     KeyName: !Ref KeyName
  #     ImageId: !Ref LatestAmiId
  #     IamInstanceProfile: !Ref SessionManagerInstanceProfile
  #     SubnetId: !Ref SubnetAPPA
  #     UserData:
  #       Fn::Base64: 
  #         !Sub |
  #           #!/bin/bash
  #           cd /home/ubuntu
  #           wget https://raw.githubusercontent.com/Playground-For-DevOps/aws-cloudformation-templates/master/nephio-infra/k8s-cluster/cluster1/kube125-worker.sh
  #           chmod +x kube125-worker.sh
  #           sudo ./kube125-worker.sh | tee install_worker1_log.txt
  #     SecurityGroupIds: 
  #       - !Ref InstanceSecurityGroup
  #     Tags:
  #       - Key: Name
  #         Value: Worker1
  Edge:
    Type: AWS::EC2::Instance 
    DependsOn: RoutePrivateSubnetIPv4
    Properties:
      InstanceType: "t2.xlarge"
      KeyName: !Ref KeyName
      ImageId: !Ref LatestAmiId
      IamInstanceProfile: !Ref SessionManagerInstanceProfile
      SubnetId: !Ref SubnetAPPA
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            echo $pwd
            cd /home/ubuntu
            wget https://raw.githubusercontent.com/Playground-For-DevOps/aws-cloudformation-templates/master/nephio-infra/k8s-cluster/edge/kube125-edge.sh
            chmod +x kube125-edge.sh
            sudo ./kube125-edge.sh | tee install_edge_log.txt

      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: EdgeCluster
  # Worker2:
  #   Type: AWS::EC2::Instance
  #   DependsOn: RoutePrivateSubnetIPv4
  #   Properties:
  #     InstanceType: "t2.xlarge"
  #     KeyName: !Ref KeyName
  #     ImageId: !Ref LatestAmiId
  #     IamInstanceProfile: !Ref SessionManagerInstanceProfile
  #     SubnetId: !Ref SubnetAPPA
  #     UserData:
  #       Fn::Base64: 
  #         !Sub |
  #           #!/bin/bash
  #           cd /home/ubuntu
  #           wget https://raw.githubusercontent.com/Playground-For-DevOps/aws-cloudformation-templates/master/nephio-infra/k8s-cluster/cluster1/kube125-worker.sh
  #           chmod +x kube125-worker.sh
  #           sudo ./kube125-worker.sh | tee install_worker2_log.txt
  #     SecurityGroupIds: 
  #       - !Ref InstanceSecurityGroup
  #     Tags:
  #       - Key: Name
  #         Value: Worker2
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access via port 22 IPv4 & v6
      SecurityGroupIngress:
        - Description: 'Allow UDP IPv4 All port'
          IpProtocol: udp
          FromPort: '1'
          ToPort: '65535'
          CidrIp: '0.0.0.0/0'
        - Description: 'Allow TCP IPv4 All port'
          IpProtocol: tcp
          FromPort: '1'
          ToPort: '65535'
          CidrIp: '0.0.0.0/0'
        - Description: 'Allow SSH IPv4 IN'
          IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
        - Description: 'Allow HTTP IPv4 IN'
          IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: '0.0.0.0/0'
        - Description: 'Allow SSH IPv6 IN'
          IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIpv6: ::/0
        - Description: 'Allow Ping IPv6 IN'
          IpProtocol: icmp
          FromPort: '-1'
          ToPort: '-1'
          CidrIpv6: ::/0
        - Description: 'Allow Ping IPv4 IN'
          IpProtocol: icmp
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: '0.0.0.0/0'

  SessionManagerRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
              - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: root
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: 
                  - 'ssm:DescribeAssociation'
                  - 'ssm:GetDeployablePatchSnapshotForInstance'
                  - 'ssm:GetDocument'
                  - 'ssm:DescribeDocument'
                  - 'ssm:GetManifest'
                  - 'ssm:GetParameter'
                  - 'ssm:GetParameters'
                  - 'ssm:ListAssociations'
                  - 'ssm:ListInstanceAssociations'
                  - 'ssm:PutInventory'
                  - 'ssm:PutComplianceItems'
                  - 'ssm:PutConfigurePackageResult'
                  - 'ssm:UpdateAssociationStatus'
                  - 'ssm:UpdateInstanceAssociationStatus'
                  - 'ssm:UpdateInstanceInformation'
                Resource: '*'
              - Effect: Allow
                Action:
                  - 'ssmmessages:CreateControlChannel'
                  - 'ssmmessages:CreateDataChannel'
                  - 'ssmmessages:OpenControlChannel'
                  - 'ssmmessages:OpenDataChannel' 
                Resource: '*'
              - Effect: Allow
                Action: 
                  - 'ec2messages:AcknowledgeMessage'
                  - 'ec2messages:DeleteMessage'
                  - 'ec2messages:FailMessage'
                  - 'ec2messages:GetEndpoint'
                  - 'ec2messages:GetMessages'
                  - 'ec2messages:SendReply'
                Resource: '*'
  SessionManagerInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref SessionManagerRole
  NATGatewayA:
    # DependsOn: Master1
    Type: AWS::EC2::NatGateway
    Properties:
        AllocationId: !GetAtt NATGatewayAEIP.AllocationId
        SubnetId: !Ref SubnetWEBA
        Tags:
        - Key: Name
          Value: NAT-Gateway A
  NATGatewayAEIP:
    Type: AWS::EC2::EIP
    Properties:
        Domain: vpc
        Tags:
        - Key: Name
          Value: NAT-Subnet-WebA-EIP
  RouteTablePrivateSubnetA: 
    Type: 'AWS::EC2::RouteTable'
    DependsOn: NATGatewayA
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: A4L-vpc1-rt-app-A
  RoutePrivateSubnetIPv4: 
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId:
        Ref: RouteTablePrivateSubnetA
      DestinationCidrBlock: '0.0.0.0/0'
      # [IPv4 traffic only] The ID of a NAT gateway.
      # Don't use GatewayId
      # The ID of an internet gateway or virtual private gateway attached to your VPC.  
      NatGatewayId: !Ref NATGatewayA
  RouteTableAssociationAppA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    # DependsOn: RoutePrivateSubnetIPv4
    Properties:
      SubnetId: !Ref SubnetAPPA
      RouteTableId:
        Ref: RouteTablePrivateSubnetA
  RouteTableAssociationDBA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    # DependsOn: RoutePrivateSubnetIPv4
    Properties:
      SubnetId: !Ref SubnetDBA
      RouteTableId:
        Ref: RouteTablePrivateSubnetA
  RouteTableAssociationReservedA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    # DependsOn: RoutePrivateSubnetIPv4
    Properties:
      SubnetId: !Ref SubnetReservedA
      RouteTableId:
        Ref: RouteTablePrivateSubnetA
Outputs:
  BastionHostInfo:
    Description: BastionHostInfo
    Value: !Ref BastionHost
  MmgtInfo:
    Value: !Ref Mmgt
  # Master2Info:
  #   Value: !Ref Master2
  RegionalInfo:
    Value: !Ref Regional
  EdgeInfo:
    Value: !Ref Edge
  # Worker2Info:
  #   Value: !Ref Worker2
  StackVPC:
    Description: The ID of the VPC
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::StackName}-VPCID"
